# AInfluncerHub

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
AinfluencerHub/AinfluencerHub/: START_HERE.bat  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
AinfluencerHub/AinfluencerHub/python/: .env.example  requirements.txt  server.py
AinfluencerHub/AinfluencerHub/python/core/: project.py  settings.py
AinfluencerHub/AinfluencerHub/python/services/: comfyui_client.py  diffusion_pipeline.py  fal_generator.py  florence_captioner.py  joy_captioner.py  lora_trainer.py  model_manager.py  models.py  preflight.py  quality_scorer.py  qwen_captioner.py  video_pipeline.py  wangp_client.py
AinfluencerHub/AinfluencerHub/python/tests/: conftest.py  test_models_registry.py  test_server_health.py  test_settings.py
AinfluencerHub/AinfluencerHub/src/: App.tsx  api.ts  main.tsx  store.ts  types.ts
AinfluencerHub/AinfluencerHub/src-tauri/: Cargo.toml  tauri.conf.json
AinfluencerHub/AinfluencerHub/src-tauri/src/: lib.rs  main.rs
AinfluencerHub/AinfluencerHub/src/__tests__/: useAsyncOperation.test.ts  useSSE.test.ts
AinfluencerHub/AinfluencerHub/src/components/: ImageGallery.tsx  SettingsModal.tsx  Sidebar.tsx
AinfluencerHub/AinfluencerHub/src/hooks/: useAsyncOperation.ts  useSSE.ts
AinfluencerHub/AinfluencerHub/src/steps/: Step1Setup.tsx  Step2Dataset.tsx  Step3Captions.tsx  Step4Training.tsx  Step5Studio.tsx  Welcome.tsx
(+4 files in other folders)
